Fix 'Tosca List Entry Schema failed to be recoginized with creating VSP'-bug
Signed-off-by: Vasyl Razinkov <vasyl.razinkov@est.tech>
Change-Id: Id33f7eff96b06a1cfb5e3e5d967b4e17da14a9a8
Issue-ID: SDC-2851